--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,22 @@
 <nav>
   <ul class="pagination">
-    <li class="page-item" *ngFor="let image of images; let i = index">
-      <a class="page-link">{{ i + 1 }}</a>
+    <li class="page-item" [ngClass]="{ disabled: currentPage === 1 }">
+      <a class="page-link" (click)="currentPage = currentPage - 1">Previous</a>
+    </li>
+    <li 
+      class="page-item" 
+      [ngClass]="{ active: i + 1 === currentPage }"
+      *ngFor="let image of images; let i = index"
+    >
+      <a class="page-link" (click)="currentPage = i + 1">{{ i + 1 }}</a>
+    </li>
+    <li class="page-item" [ngClass]="{ disabled: currentPage === images.length }">
+      <a class="page-link" (click)="currentPage = currentPage + 1">Next</a>
     </li>
   </ul>
 </nav>
+
+<div>
+  <h4>{{ images[currentPage-1].title }}</h4>
+  <img [src]="images[currentPage-1].url" />
+</div>
